<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/bemVindo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="55sp" />

    <Button
        android:id="@+id/btnCalcularMedia_Main"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"
        android:text="@string/calcularMedia" />

    <Button
        android:id="@+id/btnPrecoJusto_Main"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"
        android:text="@string/precoJusto" />

    <Button
        android:id="@+id/btnAutonomia_Main"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"
        android:text="@string/autonomia" />

    <Button
        android:id="@+id/btnCalculadora_Main"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"
        android:text="@string/calculadora" />

    <Button
        android:id="@+id/btnMtJusto_Main"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:onClick="onClick"
        android:text="@string/precoMuitoJusto" />

</LinearLayout>