<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".view.MuitoJusto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/precoMuitoJusto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="42sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomeProduto" />

    <EditText
        android:id="@+id/editNomeProduto_MuitoJusto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nomeProduto"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/valor" />

    <EditText
        android:id="@+id/editValorProduto_MuitoJusto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/hint_valor"
        android:inputType="number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numeroParcela"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/juros"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editNumeroParcela_MuitoJusto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/numeroParcela"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editJuros_MuitoJusto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_juros"
            android:inputType="number"
            android:textAlignment="center" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/checkBox" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btnVoltar_MuitoJusto"
            style="@style/btnVoltar" />

        <Button
            android:id="@+id/btnCalcular_MuitoJusto"
            style="@style/btnCalcular" />

        <Button
            android:id="@+id/btnLimparDados_MuitoJusto"
            style="@style/btnLimparDados" />

    </LinearLayout>

        <TextView
            android:id="@+id/tvResultadoFinal_MuitoJusto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

</LinearLayout>
