<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".view.Autonomia">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/autonomia"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="42sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            style="@style/paddingTipo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modeloCarro" />

        <EditText
            android:id="@+id/editModeloCarro_Autonomia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_modeloCarro"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kmPercorrido" />

        <EditText
            android:id="@+id/editKmPercorrido_Autonomia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_km"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combustivel" />

        <EditText
            android:id="@+id/editCombustivel_Autonomia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_combustivel"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVoltar_Autonomia"
            style="@style/btnVoltar" />

        <Button
            android:id="@+id/btnCalcular_Autonomia"
            style="@style/btnCalcular" />

        <Button
            android:id="@+id/btnLimparDados_Autonomia"
            style="@style/btnLimparDados" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvConsumoFrota"
        style="@style/marginTipo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:visibility="invisible"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_Autonomia"/>
    
</LinearLayout>